<resources>
    <string name="app_name">Calendar</string>
    <string name="open_event">Open Event</string>
    <string name="clear_event">Clear Event</string>
    <string name="create_event_here">Create an Event</string>
    <string name="event_description">Event Description</string>
    <string name="event_name">Event Name</string>
    <string name="horas">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="define_event_time">Set Event Time</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="create_event">Create a New Event</string>
    <string name="edit_event">Edit Event</string>
    <string name="email">Email Address</string>
    <string name="open_calendars">Open Calendars</string>
    <string name="show_profile">Show Profile</string>
    <string name="events_of_months">Events of months</string>
    <string name="arrow_back_calendars">arrow-back-calendars</string>
    <string name="enter_calendar_name">Enter Calendar Name</string>
    <string name="save_calendar">Save</string>
    <string name="primary_calendar">Primary</string>
</resources>